# SFML-2048

./: Board.cpp  Board.h  Button.cpp  Button.h  CMakeLists.txt  Game.h  MainMenu.cpp  MainMenu.h  README.md  main.cpp
